SSBOのトリプルバッファリングを実装する節を完成させる

--- a/OpenGL3D_2023_20.md
+++ b/OpenGL3D_2023_20.md
@@ -11,7 +11,7 @@
 
 ## 1. アニメーションを行うコンポーネント
 
-### 1.1 トリプルバッファリング
+### 1.1 トリプルバッファリングで描画効率を高める
 
 スケルタル・メッシュ(スキン・メッシュ)を実装する3回シリーズの3回目です。
 
@@ -19,22 +19,166 @@
 
 あるフレームにおいて、CPUが「データをバッファAにコピー」、「バッファAのデータを使って描画」という2つの命令をGPUに送るとします。すると、GPUはコピーが完了するまで待ってから描画を開始します。
 
+| フレーム | 0 | 0 | 1 | 1 | 2 |
+|:--------:|:-:|:-:|:-:|:-:|:-:|
+| バッファA | CPUからコピー | GPUが描画 | CPUからコピー | GPUが描画 | ... |
+
 そして、次のフレームでもCPUは「データをバッファAにコピー」、「バッファAのデータを使って描画」という命令を送ったとします。このとき、GPUが前のフレームで受け取った描画命令を完了していれば問題はありません。
 
 しかし、データが多いなどの理由でまだ描画中だった場合、バッファAに書き込んでしまうと描画中のデータが消えてしまいます。そうならないように、GPUは描画が完了するまで待ってからコピー命令を実行します。
 
-ただ、この流れには2つの問題があります。ひとつは「データがコピーされるまで描画が待たされる」こと、もうひとつは「描画が完了するまでコピーが待たされる」ことです。
+|         | フレーム0 | フレーム0 | フレーム1 | フレーム1 | フレーム2 | フレーム2 | … |
+|:-------:|:-:|:-:|:-:|:-:|:-:|:-:|:---:|
+| **CPU** | バッファAにコピー | (描画完了待ち) | バッファAにコピー | (描画完了待ち) | バッファAにコピー | (描画完了待ち) | … |
+| **GPU** | (待機) | バッファAを描画 | (コピー完了待ち) | バッファAを描画 | (コピー完了待ち) | バッファAを描画 | … |
 
-これらの問題を解決するには「ダブルバッファ」または「トリプルバッファ」と呼ばれる技法を使います。この技法は名前の通りバッファを二重または三重に持つことで、コピーするバッファと描画するバッファを分けます。
+図から分かるように、この流れには以下の2つの問題があります。
 
-コピー命令は描画命令とは別のバッファに書き込めるために描画の完了を待つ必要がなくなります。描画命令は最初の１回だけはコピーを待たざるを得ませんが、２回目からは描画と並行してコピーされたデータを使うので、コピー完了を待つことはありません。
+* コピー完了まで描画が待たされる。
+* 描画完了までコピーが待たされる。
 
->ここでは「コピーのほうが早く終わり、描画はコピーより時間がかかる」と仮定しています。実際に、現代のGPUではほぼこの仮定が成り立ちます。
+これらの待ち時間のあいだCPUやGPUは何もしていない(できない)ため、本来の性能を十分に発揮できません。
 
+この問題を解決するには「ダブルバッファ」または「トリプルバッファ」と呼ばれる技法を使います。この技法は名前の通りバッファを二重または三重に持つことで、コピーするバッファと描画するバッファを分けます。
 
+|         | フレーム0 | フレーム0 | フレーム1 | フレーム2 | フレーム3 | フレーム4 | … |
+|:-------:|:-:|:-:|:-:|:-:|:-:|:-:|:---:|
+| **CPU** | バッファAにコピー | バッファBにコピー | バッファAにコピー | バッファBにコピー | バッファAにコピー | バッファBにコピー | … |
+| **GPU** | (待機) | バッファAを描画 | バッファBを描画 | バッファAを描画 | バッファBを描画 | バッファAを描画 | … |
 
+このように、描画とコピーを別のバッファに行うことで、「コピー完了待ち」と「描画完了待ち」をなくしています。CPUとGPUの動作を止める要因がなくなったことで、両者の性能を無駄なく発揮できるのです。
 
-### 1.1 アニメーションの構成要素
+>**【ダブルバッファとトリプルバッファのどちらを使うべきか】**<br>
+>ダブルバッファはメモリ消費量が少なく、トリプルバッファは描画に時間がかかる場合でも安定して高速化が見込めます。現代のコンピュータには十分なメモリがあるため、一般的にはトリプルバッファが選択されます。
+
+ダブル(トリプル)バッファリングを行うには、確保するバッファの数を2～3倍にして、書き込み先のバッファを表すインデックスを用意します。さらに、描画完了を待つための「同期オブジェクト」も必要となります。
+
+OpenGLの「同期オブジェクト」は、「GPUの処理がどこまで進んだか」をCPUに通知するための仕組みです。同期オブジェクトによって、書き込み先のバッファがGPUに使用されていないことを確認できます。
+
+それでは、「書き込み先インデックス」と「同期オブジェクト」を追加しましょう。
+`Engine.h`を開き、`Engine`クラスの定義に次のプログラムを追加してください。
+
+```diff
+   // 関節行列の配列の最大バイト数
+   static constexpr size_t jointMatricesBytes = 1024 * 1024;
+-  BufferObjectPtr ssboJointMatrices; // 関節行列の配列用のバッファ
++  BufferObjectPtr ssboJointMatrices[3]; // 関節行列の配列用のバッファ
++  GLsync syncJointMatrix[3] = { 0, 0, 0 };// 関節行列の同期オブジェクト
++  size_t jointMatrixIndex = 0; // 関節行列の書き込み先インデックス
+
+   MeshBufferPtr meshBuffer;   // 図形データ管理オブジェクト
+   std::unordered_map<std::string, TexturePtr> textureCache;
+```
+
+今回はトリプルバッファを使うので、バッファと同期オブジェクトを3つ用意しています。同期オブジェクトは`GLsync`(ジーエル・シンク)型の変数で定義します。
+
+次に、バッファサイズを3倍にします。`Engine.cpp`を開き、`Initialize`メンバ関数の定義にある`ssboJointMatrices`を作成するプログラムを、次のように変更してください。
+
+```diff
+  fboShadow = std::make_shared<FramebufferObject>(nullptr, texShadow);
+
+  // 関節用のSSBOを作成
+-  ssboJointMatrices = BufferObject::Create(jointMatricesBytes);
++  for (size_t i = 0; i < std::size(ssboJointMatrix); ++i) {
++    ssboJointMatrices[i] = BufferObject::Create(jointMatricesBytes);
++  }
++  jointMatrixIndex = 0;
+
+  // スケルタルメッシュ用のシェーダとVAOを割り当てる
+  glUseProgram(progSkeletal);
+```
+
+次に、描画の最後に「同期オブジェクト」を追加します。`Render`メンバ関数の定義にある
+`overlay`以降のキューを描画するプログラムの下に、次のプログラムを追加してください。
+
+```diff
+   glDisable(GL_DEPTH_TEST); // 深度テストを無効化
+   glUseProgram(*progUnlit);
+   DrawGameObject(*progUnlit, overlayBegin, gameObjects.end());
++
++  // 描画完了待ちのため、同期オブジェクトを作成
++  syncJointMatrix[jointMatrixIndex] = glFenceSync(GL_SYNC_GPU_COMMANDS_COMPLETE, 0);
++
++  // トリプルバッファのインデックスを更新
++  jointMatrixIndex = (jointMatrixIndex + 1) % std::size(ssboJointMatrices);
+
+   // シャドウマップのチェック用
+ #if 0
+```
+
+同期オブジェクトを作成するには`glFenceSync`(ジーエル・フェンス・シンク)関数を使います。
+
+<p><code class="tnmai_code"><strong>【書式】</strong><br>
+GLsync glFenceSync(同期するGPUイベント, フラグ);
+</code></p>
+
+現在、同期するGPUイベントに指定できるのは`GL_SYNC_GPU_COMMANDS_COMPLETE`(ジーエル・シンク・ジーピーユー・コマンズ・コンプリート)だけです。このイベントは「直前までに発行された全てのGPU命令が完了した」ことを通知します。
+
+関数から返される同期オブジェクトは、イベントの通知状態をチェックするために使用します。また、OpenGL 4.6には指定可能はフラグはないので常に`0`を指定します。
+
+続いて、関節行列のコピー先を選択します。`UpdateJointMatrix`メンバ関数の定義に次のプログラムを追加してください。
+
+```diff
+     // 関節行列の総数を更新
+     totalJointCount += jointCount;
+   } // for go
++
++  // 描画完了を待つ
++  if (syncJointMatrix[jointMatrixIndex]) {
++    const GLuint64 timeout = 16'700'000; // 16.7ミリ秒(約1/60秒)
++    glClientWaitSync(syncJointMatrix[jointMatrixIndex], GL_SYNC_FLUSH_COMMANDS_BIT, timeout);
++
++    // 同期オブジェクトを削除
++    glDeleteSync(syncJointMatrix[jointMatrixIndex]);
++    syncJointMatrix[jointMatrixIndex] = 0;
++  }
+
+   // 関節の座標変換行列をGPUメモリにコピー
+   if (totalJointCount > 0) {
+     const size_t size = sizeof(mat4) * totalJointCount;
+-    ssboJointMatrices->CopyData(0, jointMatrices.data(), size);
++    ssboJointMatrices[jointMatrixIndex]->CopyData(0, jointMatrices.data(), size);
+   }
+ }
+```
+
+同期オブジェクトに指定したイベントの状態を調べるには`glClientWaitSync`(ジーエル・クライアント・ウェイト・シンク)関数を使います。
+
+<p><code class="tnmai_code"><strong>【書式】</strong><br>
+GLenum glClientWaitSync(同期オブジェクト, フラグ, 待機時間);
+</code></p>
+
+この関数は、同期オブジェクトに設定されたイベントが発生するのを「待機時間」で指定した時間だけ待ちます。既にイベントが発生したあとの場合、関数は即座に終了します。
+
+OpenGL 4.6の時点では、フラグには常に`GL_SYNC_FLUSH_COMMANDS_BIT`(ジーエル・シンク・フラッシュ・コマンズ・ビット)を指定しなくてはなりません。なお、このフラグは「イベントの監視終了」を指示するものです。
+
+戻り値を調べることで、イベントが「発生済み」なのか、「待機時間中に発生」したのか、「発生しなかった」のかを判別できます。しかし、同期オブジェクトのデバッグ以外ではあまり使い道がないので、上記のプログラムでは無視しています。
+
+使い終わった動機オブジェクトは明示的に削除しなくてはなりません(削除しないとメモリリークになります)。同期オブジェクトを削除するには`glDeleteSync`(ジーエル・デリート・シンク)関数を使います。
+
+<p><code class="tnmai_code"><strong>【書式】</strong><br>
+void glDeleteSync(削除する動機オブジェクト);
+</code></p>
+
+最後に、スケルタルメッシュを描画する時に使うSSBOの指定方法を変更します。`DrawGameObject`メンバ関数の定義にあるスケルタルメッシュを描画するプログラムを、次のように変更してください。
+
+```diff
+
+     // スケルタルメッシュ用のシェーダとVAOを割り当てる
+     glUseProgram(progSkeletal);
+     glBindVertexArray(*meshBuffer->GetVAOSkeletal());
+
+-    e->renderer->Draw(*e, progSkeletal, *ssboJointMatrices, bpJointMatrices);
++    e->renderer->Draw(*e, progSkeletal,
++      *ssboJointMatrices[jointMatrixIndex], bpJointMatrices);
+
+     // 元のシェーダとVAOに戻す
+     glBindVertexArray(*meshBuffer->GetVAO());
+```
+
+プログラムが書けたらビルドして実行してください。以前と同様にアニメーションが表示されていたら成功です。
+
+### 1.2 アニメーションの構成要素
 
 `AnimationTest`コンポーネントに実装したアニメーションプログラムは、「アニメーションさせる」という目的を果たすには十分なものでした。しかし、アニメーションの種類ごとにコンポーネントを作成するのは、あまり効率的とは言えません。
 
@@ -67,7 +211,7 @@
 
 `Keyframe`は`AnimationCurve`の構成要素で、「ある時刻における回転(または拡大率、位置)」を表現します。例えば「右腕を前に30°回転させた状態」「右腕を後ろに-30°回転させた状態」などです。
 
-### 1.2 SkeletalMeshRendererをアニメーションに対応する
+### 1.3 SkeletalMeshRendererをアニメーションに対応する
 
 今回作成するアニメーション・プログラムでは、位置、回転、拡大率を個別にアニメーションできるように作成します。ただ、現在の`SkeletalMeshRenderer`コンポーネントはこれらを一つの行列としてまとめてしまっています。
 
@@ -138,7 +282,7 @@
 
 これで、位置、回転、拡大率を個別に制御できるようになりました。アニメーションプログラムの作成に戻りましょう。
 
-### 1.3 Keyframe構造体を定義する
+### 1.4 Keyframe構造体を定義する
 
 それでは、基礎となる`Kyeframe`構造体から定義していきましょう。プロジェクトの`Src/Engine`フォルダに`Animation.h`という名前のヘッダファイルを追加してください。追加したファイルを開き、次のプログラムを追加してください。
 
@@ -176,7 +320,7 @@
 
 >より詳細かつ汎用的な制御を行いたい場合は「アニメーション状態」の型を`float`にします。実際に、`float`型は多くのゲームエンジンのデフォルトです。ただし、`float`は`vec3`より詳細度が高いためにアニメーションの計算に時間がかかります。そのため、なんらかの最適化を行わない場合、ゲームの動作速度を低下させる可能性があります。
 
-### 1.3 AnimationCurveクラスを定義する
+### 1.5 AnimationCurveクラスを定義する
 
 次に`AnimationCurve`(アニメーション・カーブ)クラスを定義します。「カーブ」という名前は「数値の変化をグラフとして表現すると、一種の曲線とみなせる」ことから名付けています(直線も曲線の一種です)。
 
@@ -242,7 +386,7 @@
 
 また、複数のキーフレームを一度に追加できるように、「キーフレーム配列」を追加するメンバ関数も用意することにします。
 
-### 1.4 AddKeyメンバ関数を定義する
+### 1.6 AddKeyメンバ関数を定義する
 
 それでは、メンバ関数の定義を作成しましょう。プロジェクトの`Src/Engine`フォルダに`Animation.cpp`という名前のCPPファイルを追加してください。追加したファイルを開き、次のプログラムを追加してください。
 
@@ -287,7 +431,7 @@
 
 等しい場合はキーフレームを追加できないので、エラーメッセージを表示して`false`を返します。
 
-### 1.5 配列版のAddKeyメンバ関数を定義する
+### 1.7 配列版のAddKeyメンバ関数を定義する
 
 次に、キーフレーム配列を受け取るバージョンの`AddKey`メンバ関数を定義します。キーフレームを追加する`AddKey`メンバ関数の定義の下に、次のプログラムを追加してください。
 
@@ -316,7 +460,7 @@
 
 初期化子リストを使う利点は、追加する要素数が分かることです。そのため、`reserve`関数によって要素数を予約する最適化が可能になっています。
 
-### 1.6 Evaluateメンバ関数を定義する
+### 1.8 Evaluateメンバ関数を定義する
 
 続いて`Evaluate`(エバリュエート、「評価する」という意味)メンバ関数を定義します。配列版の`AddKey`メンバ関数の定義の下に、次のプログラムを追加してください。
 
@@ -398,7 +542,7 @@
 
 要素が見つからなかったということは、`time`は末尾のキーフレームの時刻より後ろを指しています。この場合は末尾のキーフレームの値を返します。これで例外処理を備えた`Evaluate`メンバ関数は完成です。
 
-### 1.7 Lengthメンバ関数を定義する
+### 1.9 Lengthメンバ関数を定義する
 
 最後に、アニメーションの長さを取得する`Length`(レングス)メンバ関数を定義します。`Evaluate`メンバ関数の定義の下に、次のプログラムを追加してください。
 
@@ -423,7 +567,7 @@
 
 このように、プログラミング作業では、起こる確率の低い状態に対処するプログラムが全体の半分以上を占めます。これらの例外を適切に処理しないと、プログラムは簡単にクラッシュしてしまうでしょう。
 
-### 1.8 AnimationClipクラスを定義する
+### 1.10 AnimationClipクラスを定義する
 
 次に`AnimationClip`クラスを定義するのですが、その前にこのクラスで利用する列挙型を定義しておきます。`Animation.h`を開き、`AnimationCurve`クラスの定義の下に、次のプログラムを追加してください。
 
@@ -510,7 +654,7 @@
 
 `AnimationClip`クラスは、「アニメーションカーブを追加するメンバ関数」と「ある時刻のアニメーションをゲームオブジェクトに反映するメンバ関数」を持ちます。
 
-### 1.9 AddCurveメンバ関数を定義する
+### 1.11 AddCurveメンバ関数を定義する
 
 それでは`AddCurve`(アド・カーブ)メンバ関数を定義しましょう。`Animation.cpp`を開き、`AnimationClip::Length`メンバ関数の定義の下に、次のプログラムを追加してください。
 
@@ -550,7 +694,7 @@
 
 `AddKey`メンバ関数と同様に、一致する要素がすでに存在する場合は警告メッセージを表示して終了します。
 
-### 1.10 Evaluateメンバ関数を定義する
+### 1.12 Evaluateメンバ関数を定義する
 
 続いて`Evalulate`(エバリュエート)メンバ関数を定義します。`AddCurve`メンバ関数の定義の下に、次のプログラムを追加してください。
 
@@ -607,7 +751,7 @@
 >**【位置、回転、拡大率以外をアニメーションさせるには】**<br>
 >このプログラムではアニメーションの対象を、位置、回転、拡大率のみとしています。他の要素、例えば「ゲームオブジェクトの色」をアニメーションさせたい場合は`AnimationTaget`に色を表すメンバを追加し、色を反映するプログラムを作成します。
 
-### 1.11 Animatorクラスを定義する
+### 1.13 Animatorクラスを定義する
 
 次に`Animator`(アニメータ)クラスを定義します。`Animation.h`を開き、`AnimationClip`クラスの定義に次のプログラムを追加してください。
 
@@ -680,7 +824,7 @@
 
 アニメーションクリップの設定は`AddClip`(アド・クリップ)メンバ関数で行います。アニメーションの再生と停止は`Play`(プレイ)メンバ関数、`Stop`(ストップ)メンバ関数で行います。
 
-### 1.12 Updateメンバ関数を定義する
+### 1.14 Updateメンバ関数を定義する
 
 それでは`Animator`クラスのメンバ関数を定義していきましょう。最初は`Update`メンバ関数からです。`Animation.cpp`を開き、`AnimationClip::Evaluate`メンバ関数の定義の下に、次のプログラムを追加してください。
 
@@ -733,7 +877,7 @@
 
 最後に、更新した経過時間を使ってアニメーションクリップを評価します。
 
-### 1.13 AddClipメンバ関数を定義する
+### 1.15 AddClipメンバ関数を定義する
 
 次にアニメーションクリップを追加する`AddClip`(アド・クリップ)メンバ関数を定義します。`Update`メンバ関数の定義の下に、次のプログラムを追加してください。
 
@@ -765,7 +909,7 @@
 
 同名のクリップが存在しない場合は、`emplace`(エンプレイス)メンバ関数によって要素を追加します。
 
-### 1.14 Playメンバ関数を定義する
+### 1.16 Playメンバ関数を定義する
 
 続いて`Play`(プレイ)メンバ関数を定義します。`AddClip`メンバ関数の定義の下に、次のプログラムを追加してください。
 
@@ -797,7 +941,7 @@
 
 クリップが見つかった場合、見つかったアニメーションクリップの情報を`currentClipName`と`currentClip`メンバ変数に保存し、`isPlaying`を`true`にして再生状態に設定します。
 
-### 1.15 Stopメンバ関数を定義する
+### 1.17 Stopメンバ関数を定義する
 
 次に`Stop`(ストップ)メンバ関数を定義します。`Play`メンバ関数の定義の下に、次のプログラムを追加してください。
 
@@ -816,7 +960,7 @@
 
 再生停止状態にする以外は特にすることはありません。これで`Animator`クラスは完成です。
 
-### 1.16 Animatorコンポーネントを使う
+### 1.18 Animatorコンポーネントを使う
 
 作成した`Animator`コンポーネントを使ってみましょう。`ExplorationScene.cpp`を開き、`Animation.h`をインクルードしてください。
 
@@ -972,7 +1116,7 @@
 不要になった<code>AnimationTest</code>コンポーネントの定義を削除しなさい。
 </pre>
 
-### 1.17 アニメーションを追加する
+### 1.19 アニメーションを追加する
 
 アニメーションの切り替えをテストするために、アニメーションクリップを追加作成しましょう。歩行アニメーションクリップを作成するプログラムの下に、次のプログラムを追加してください。
 
@@ -1065,7 +1209,7 @@
 
 プログラムが書けたらビルドして実行してください。Pキーを押すたびに歩行と待機が切り替わったら成功です。
 
-### 1.18 座標変換パラメータをリセットする
+### 1.20 座標変換パラメータをリセットする
 
 待機アニメーションを切り替えたとき、足の角度が直立に戻らないことに気づくと思います。アニメーションクリップに足のアニメーションを設定していない以上は当然のことです。
 
@@ -1639,23 +1783,12 @@ OpenGLプロジェクトの<code>Res/MeshData</code>フォルダに<code>OrcSham
 <pre class="tnmai_assignment">
 <strong>【課題05】</strong>
 好きな3DモデルをダウンロードしてOBJファイルに変換し、スケルトンと移動(歩く、走るなど)アニメーションを設定して表示しなさい。移動アニメーションさえあれば、攻撃は適当な光線を発射するだけ、ダメージややられたときはビルボードを表示するだけでもゲームは成立します。もう少し現実的なところでは、以下の5個のアニメーションクリップがあれば十分でしょう。
-
 - 待機: 腕を揺らすなどの、ちょっとした動きがあるとよい。
 - 移動: 歩く、走る、空中を飛ぶなど。
 - 攻撃: 武器を振り上げて振り下ろす、銃を構えるなど。
 - ダメージ: 胴体をのけぞらせる(前か後ろに傾ける)程度で十分です。
 - 死亡: 前か後ろに倒れる。
 </pre>
-
-
-
-
-
-
-
-
-
-
 
 >**【2章のまとめ】**
 >
