習得目標と各章のまとめを記述したりする

--- a/OpenGL3D_2023_20.md
+++ b/OpenGL3D_2023_20.md
@@ -4,10 +4,10 @@
 
 ## 習得目標
 
-* 
-* 
-* 
-* 
+* CPUとGPUを待ち時間なく連携させる手法について説明できる。
+* キーフレームアニメーションについて説明できる。
+* CPUとGPUの両方で関節行列を参照する方法を説明できる。
+* Unityのスキンメッシュをスタティックメッシュに変換できる。
 
 ## 1. アニメーションを行うコンポーネント
 
@@ -184,20 +184,24 @@ void glDeleteSync(削除する動機オブジェクト);
 
 そこで、「キー・フレーム」を利用したアニメーションを制御するコンポーネントを作成することにします。
 
-「キー・フレーム(Key frame)」は、キャラクターの「動きの特徴を表現するために重要な瞬間」のことです。例えば、キャラクターが上下に移動するアニメーションでは、キャラクターが一番上および一番下に到達した瞬間がキーフレームに当たります。
+「キー・フレーム(Key frame)」は、キャラクターの「動きの特徴を表現するために重要な状態」のことです。例えば、キャラクターが上下に移動するアニメーションでは、キャラクターが一番上および一番下に到達した瞬間がキーフレームに当たります。
 
 そして、いくつかのキーフレームをつなぎ合わせてアニメーションを再現する手法を「キーフレーム・アニメーション」といいます。
 
 キーフレーム・アニメーションではキーフレームだけを保存すればよいので、それ以外の瞬間の状態は不要です。そのため、「少ないデータでアニメーションが表現できる」ところが利点です。
 
-さて、キーフレーム・アニメーションを実現するためには、以下のようなクラスが必要となります。
+さて、キーフレーム・アニメーションを実現するためには、以下のクラスが必要となります。
 
 | クラス名 | 役割 |
 |:--------:|:----|
-| `Keyfram`<br>(キーフレーム) | 動きの特徴を表す構造体 |
+| `Keyframe`(キーフレーム) | 動きの特徴を表す構造体 |
 | `AnimationCurve`<br>(アニメーションカーブ) | キーフレーム配列を管理するクラス |
 | `AnimationClip`<br>(アニメーションクリップ) | アニメーションカーブ配列を管理するクラス |
-| `Animator`<br>アニメーター) | アニメーションクリップ配列を管理するクラス |
+| `Animator`(アニメーター) | アニメーションクリップ配列を管理するクラス |
+
+<p align="center">
+<img src="images/20_animator_hierarchy.png" width="80%" />
+</p>
 
 これらのクラスは個別にファイルを作成するほどの規模ではないので、`Animation.h`(アニメーション・エイチ)と`Animation.cpp`(アニメーション・シーシーピー)という2つのファイルにまとめることにします。
 
@@ -1259,11 +1263,10 @@ void glDeleteSync(削除する動機オブジェクト);
 
 >**【1章のまとめ】**
 >
->* 
->* 
->* 
->* 
->* 
+>* トリプルバッファリングを使うとCPUとGPUを効率的に利用できる。
+>* アニメーションの「動きの特徴を表現するために重要な状態」のことを「キーフレーム」という。
+>* キーフレームをつなぎ合わせてアニメーションを表現する技法を「キーフレーム・アニメーション」という。
+>* スケルタルメッシュのキーフレームアニメーションでは、関節ごとにキーフレームの配列(アニメーション・カーブ)を定義する。
 
 <div style="page-break-after: always"></div>
 
@@ -1491,6 +1494,13 @@ void glDeleteSync(削除する動機オブジェクト);
 
 プログラムが書けたらビルドして実行してください。どのアニメーションを再生しても、右手を前に上げた状態になっていたら成功です。
 
+>**【2章のまとめ】**
+>
+>* CPUとGPUの両方から関節行列を参照するには、CPUメモリとGPUメモリの両方にコピーを作成しなくてはならない。
+>* 部分的にアニメーションさせるデータを組み合わせることで、さまざまなバリエーションを作成できる。
+
+<div style="page-break-after: always"></div>
+
 ## 3. スキンメッシュをOBJファイルに変換する
 
 ### 3.1 スキンメッシュをスタティックメッシュに変換する
@@ -1678,12 +1688,12 @@ OpenGLプロジェクトの<code>Res/MeshData</code>フォルダに<code>OrcSham
 -    skeleton.bones[3] = { { 0.2f, 1.3f, 0 }, { 0.8f, 1.3f, 0 }, 0, 0.2f }; // 左腕
 -    skeleton.bones[4] = { {-0.1f, 0.8f, 0 }, {-0.1f, 0.0f, 0 }, 0, 0.2f }; // 右足
 -    skeleton.bones[5] = { { 0.1f, 0.8f, 0 }, { 0.1f, 0.0f, 0 }, 0, 0.2f }; // 左足
-+    skeleton.bones[0] = { { 0.0f, 1.00f,-0.2f }, { 0.0f, 1.80f,-0.2f },-1, 0.7f }; // 胴体
-+    skeleton.bones[1] = { { 0.0f, 1.70f, 0.1f }, { 0.0f, 1.70f, 0.3f }, 0, 0.5f }; // 頭
-+    skeleton.bones[2] = { {-0.4f, 1.65f,-0.2f }, {-1.6f, 1.65f,-0.2f }, 0, 0.5f }; // 右腕
-+    skeleton.bones[3] = { { 0.4f, 1.65f,-0.2f }, { 1.6f, 1.65f,-0.2f }, 0, 0.5f }; // 左腕
-+    skeleton.bones[4] = { {-0.2f, 0.90f,-0.2f }, {-0.2f, 0.00f,-0.2f }, 0, 0.3f }; // 右足
-+    skeleton.bones[5] = { { 0.2f, 0.90f,-0.2f }, { 0.2f, 0.00f,-0.2f }, 0, 0.3f }; // 左足
++    skeleton.bones[0] = { { 0.0f, 1.00f,-0.2f }, { 0.0f, 1.80f,-0.2f },-1, 0.7f };//胴体
++    skeleton.bones[1] = { { 0.0f, 1.70f, 0.1f }, { 0.0f, 1.70f, 0.3f }, 0, 0.5f };//頭
++    skeleton.bones[2] = { {-0.4f, 1.65f,-0.2f }, {-1.6f, 1.65f,-0.2f }, 0, 0.5f };//右腕
++    skeleton.bones[3] = { { 0.4f, 1.65f,-0.2f }, { 1.6f, 1.65f,-0.2f }, 0, 0.5f };//左腕
++    skeleton.bones[4] = { {-0.2f, 0.90f,-0.2f }, {-0.2f, 0.00f,-0.2f }, 0, 0.3f };//右足
++    skeleton.bones[5] = { { 0.2f, 0.90f,-0.2f }, { 0.2f, 0.00f,-0.2f }, 0, 0.3f };//左足
      meshBuffer->LoadOBJ("Res/MeshData/OrcShaman/OrcShaman.obj", skeleton);
    }
 ```
@@ -1790,15 +1800,7 @@ OpenGLプロジェクトの<code>Res/MeshData</code>フォルダに<code>OrcSham
 - 死亡: 前か後ろに倒れる。
 </pre>
 
->**【2章のまとめ】**
+>**【3章のまとめ】**
 >
->* 
->* 
->* 
->* 
->* 
-
-
-
-
-
+>* Unityの`Simplest Mesh Baker`アセットを使うと、スキンメッシュをスタティックメッシュに変換できる。
+>* スケルトン構造が同じモデルは、同じアニメーションデータでアニメーションさせられる。
