関節行列をvectorではなく通常の配列で確保する(値初期化を避けるため)

--- a/OpenGL3D_2023_20.md
+++ b/OpenGL3D_2023_20.md
@@ -138,8 +138,8 @@ GLsync glFenceSync(同期するGPUイベント, フラグ);
    // 関節の座標変換行列をGPUメモリにコピー
    if (totalJointCount > 0) {
      const size_t size = sizeof(mat4) * totalJointCount;
--    ssboJointMatrices->CopyData(0, jointMatrices.data(), size);
-+    ssboJointMatrices[jointMatrixIndex]->CopyData(0, jointMatrices.data(), size);
+-    ssboJointMatrices->CopyData(0, jointMatrices.get(), size);
++    ssboJointMatrices[jointMatrixIndex]->CopyData(0, jointMatrices.get(), size);
    }
  }
 ```
