jointTransformsを初期化するコードを追加

--- a/OpenGL3D_2023_20.md
+++ b/OpenGL3D_2023_20.md
@@ -259,6 +259,19 @@ void glDeleteSync(削除する動機オブジェクト);
    size_t gpuOffset = 0; // 座標変換行列のGPUメモリ上の位置
 ```
 
+`jointMatrices`配列と同様に、`jointTransforms`配列のサイズはメッシュの関節数と等しい必要があります。そこで、`SetMesh`メンバ関数の定義に次のプログラムを追加してください。
+
+```diff
+   void SetMesh(const SkeletalMeshPtr& mesh) {
+     skeletalMesh = mesh;
+     jointMatrices.resize(skeletalMesh->joints.size(), mat4(1));
++    jointTransforms.resize(skeletalMesh->joints.size());
+   }
+
+   // 設定されているスケルタルメッシュを取得
+   const SkeletalMeshPtr& GetMesh() const { return skeletalMesh; }
+```
+
 続いて、追加した`jointTransforms`(ジョイント・トランスフォームズ)配列にアクセスするメンバ関数を追加してください。
 
 ```diff
