アニメーション切り替え条件が間違ってたので直す

--- a/OpenGL3D_2023_20.md
+++ b/OpenGL3D_2023_20.md
@@ -1225,7 +1225,7 @@ void glDeleteSync(削除する動機オブジェクト);
 +
 +    // Pキーが押されるたびにアニメーションを切り替える
 +    const bool newKey = owner->GetEngine()->GetKey(GLFW_KEY_P);
-+    if (! newKey || oldKey) {
++    if (newKey && !oldKey) {
 +      static const char* const names[] = { "walk", "wait" };
 +      animationNo = (animationNo + 1) % std::size(names);
 +      animator->Play(names[animationNo]);
