Engine.cppにProgramObject.hをインクルードするコードを追加

--- a/OpenGL3D_2023_21.md
+++ b/OpenGL3D_2023_21.md
@@ -510,7 +510,18 @@ void glGetProgramiv(プログラムの管理番号, 取得する情報の種類,
    FramebufferObjectPtr fboShadow; // デプスシャドウ用FBO
 ```
 
-次に`Engine.cpp`を開き、`Initialize`メンバ関数の定義に次のプログラムを追加してください。
+次に`Engine.cpp`を開き、`ProgramObject.h`をインクルードしてください。
+
+```diff
+ #define _CRT_SECURE_NO_WARNINGS
+ #include "Engine.h"
+ #include "FramebufferObject.h"
++#include "ProgramObject.h"
+ #include "EasyAudio/EasyAudio.h"
+ #include "SphereCollider.h"
+```
+
+続いて、`Initialize`メンバ関数の定義に次のプログラムを追加してください。
 
 ```diff
    progShadow = std::make_shared<ProgramObject>(
