DrawMainImageToDefaultFramebuffer関数の末尾にglEnable(GL_BLEND)を追加

--- a/OpenGL3D_2023_21.md
+++ b/OpenGL3D_2023_21.md
@@ -1106,6 +1106,8 @@ UIは`overlay`キューで描画しているので、その直前にデフォル
 +    meshBuffer->GetStaticMesh("plane_xy")->drawParamsList[0];
 +  glDrawElementsBaseVertex(drawParams.mode, drawParams.count,
 +    GL_UNSIGNED_SHORT, drawParams.indices, drawParams.baseVertex);
++
++  glEnable(GL_BLEND); // 半透明合成を有効化
 +}
 ```
 
