コード追加に伴い、PDF化の際の改行位置を調整

--- a/OpenGL3D_2023_20.md
+++ b/OpenGL3D_2023_20.md
@@ -608,7 +608,7 @@ void glDeleteSync(削除する同期オブジェクト);
 +}
 ```
 
-基本的には末尾のキーフレームの時刻を返しますが、要素がひとつもない場合は`0`を返すような例外処理を入れています。
+この関数は末尾のキーフレームの時刻を返します。「要素がひとつもない」という可能性に対処するため、その場合は`0`を返すという例外処理を入れています。
 
 このように、プログラミング作業では、起こる確率の低い状態に対処するプログラムが全体の半分以上を占めます。これらの例外を適切に処理しないと、プログラムは簡単にクラッシュしてしまうでしょう。
 
@@ -1011,7 +1011,8 @@ void glDeleteSync(削除する同期オブジェクト);
 
 ### 1.18 Animatorコンポーネントを使う
 
-作成した`Animator`コンポーネントを使ってみましょう。`ExplorationScene.cpp`を開き、`Animation.h`をインクルードしてください。
+作成した`Animator`コンポーネントを使ってみましょう。`ExplorationScene.cpp`を開き、
+`Animation.h`をインクルードしてください。
 
 ```diff
  #include "ExplorationScene.h"
@@ -1861,7 +1862,12 @@ OpenGLプロジェクトの<code>Res/MeshData</code>フォルダに<code>OrcSham
 
 <pre class="tnmai_assignment">
 <strong>【課題05】</strong>
-好きな3DモデルをダウンロードしてOBJファイルに変換し、スケルトンと移動(歩く、走るなど)アニメーションを設定して表示しなさい。移動アニメーションさえあれば、攻撃は適当な光線を発射するだけ、ダメージややられたときはビルボードを表示するだけでもゲームは成立します。もう少し現実的なところでは、以下の5個のアニメーションクリップがあれば十分でしょう。
+好きな3DモデルをダウンロードしてOBJファイルに変換し、スケルトンと移動(歩く、
+走るなど)アニメーションを設定して表示しなさい。移動アニメーションさえあれば、
+攻撃は適当な光線を発射するだけ、ダメージや死亡したときはビルボードを表示する
+だけ、という設計でもゲームは成立します。より良いゲーム体験を目指すとしたら、
+とりあえず以下の5種類のアニメーションクリップを用意するとよいでしょう。
+
 - 待機: 腕を揺らすなどの、ちょっとした動きがあるとよい。
 - 移動: 歩く、走る、空中を飛ぶなど。
 - 攻撃: 武器を振り上げて振り下ろす、銃を構えるなど。
