スカイスフィア描画終了時に3D描画用シェーダに戻す処理を追加

--- a/OpenGL3D_2023_17.md
+++ b/OpenGL3D_2023_17.md
@@ -464,6 +464,7 @@ https://commons.wikimedia.org/wiki/File:Radiosity_Comparison.jpg
 +
 +  glProgramUniform3fv(progUnlit, 4, 1, &camera.position.x); // カメラ座標を元に戻す
 +  glDepthMask(GL_TRUE); // 深度バッファへの書き込みを許可
++  glUseProgram(prog3D); // 3D描画用シェーダに戻す
  }
 ```
 
