sampingをsamplingに修正. 拡大ぼかし後にブレンド式をUI描画用に戻す処理を追記.

--- a/OpenGL3D_2023_21.md
+++ b/OpenGL3D_2023_21.md
@@ -1488,7 +1488,7 @@ UIは`overlay`キューで描画しているので、その直前にデフォル
 
 抽出の手順はコメントに書いてあるとおりです。それから、「明るい成分の比率を計算」するプログラムに現れる`0.001`は、ゼロ除算を回避することが目的です。
 
-次に、縮小ぼかしシェーダを作成します。プロジェクトの`Res`フォルダに`down_samping.frag`(ダウン・サンプリング・フラグ)という名前のテキストファイルを追加してください。追加したファイルを開き、次のプログラムを追加してください。
+次に、縮小ぼかしシェーダを作成します。プロジェクトの`Res`フォルダに`down_sampling.frag`(ダウン・サンプリング・フラグ)という名前のテキストファイルを追加してください。追加したファイルを開き、次のプログラムを追加してください。
 
 ```diff
 +/**
@@ -1527,7 +1527,7 @@ UIは`overlay`キューで描画しているので、その直前にデフォル
 <img src="images/21_down_sampling.png" width="20%" />
 </p>
 
-続いて、拡大ぼかしシェーダを作成します。プロジェクトの`Res`フォルダに`up_samping.frag`(アップ・サンプリング・フラグ)という名前のテキストファイルを追加してください。追加したファイルを開き、次のプログラムを追加してください。
+続いて、拡大ぼかしシェーダを作成します。プロジェクトの`Res`フォルダに`up_sampling.frag`(アップ・サンプリング・フラグ)という名前のテキストファイルを追加してください。追加したファイルを開き、次のプログラムを追加してください。
 
 ```diff
 +/**
@@ -1811,6 +1811,9 @@ UIは`overlay`キューで描画しているので、その直前にデフォル
 +  glBindTextures(0, 1, &tex1);
 +  glDrawElementsBaseVertex(drawParams.mode, drawParams.count,
 +    GL_UNSIGNED_SHORT, drawParams.indices, drawParams.baseVertex);
++
++  // ブレンド式を元に戻す
++  glBlendFunc(GL_SRC_ALPHA, GL_ONE_MINUS_SRC_ALPHA);
  }
 
  /**
