マイクロファセットモデルを説明する画像を追加

--- a/OpenGL3D_2023_22.md
+++ b/OpenGL3D_2023_22.md
@@ -30,6 +30,11 @@
 
 「マイクロファセット」は「微小平面」という意味で、「物体表面を目に見えないほど微小な平面の集合として考える」ライティング技法のことです。
 
+<p align="center">
+<img src="images/22_microfacet_model.png" width="45%" /><br>
+[拡大図に見える小さな平面ひとつひとつがマイクロファセット]
+</p>
+
 BRDFは「双方向反射率分布関数`Bidirectional Reflectance Distribution Function`」の略称で、「ある方向からの入射光が、ある方向に出射する比率」を表します。
 
 「双方向」という名称は、「入射ベクトルと出射ベクトルを入れ替えても結果が変わらない」ことから来ています。
@@ -46,12 +51,12 @@ BRDFは「双方向反射率分布関数`Bidirectional Reflectance Distribution 
 >* メタリック(金属なら`1`、非金属なら`0`)
 >* ラフネス(物体表面の粗さを`0.0`～`1.0`で表す)
 
-これらのパラメータを用いて、拡散反射と鏡面反射の2つのBRDFの組み合わせとして定義されています。また、一般に入射ベクトルには「光線ベクトル」、出射ベクトルには「カメラベクトル」が使われます。
+BRDFはこれらのパラメータを用いて、拡散反射と鏡面反射の2つのBRDFを組み合わせて作成されます。また、一般に入射ベクトルには「光線(ライト)ベクトル」、出射ベクトルには「視線(カメラ)ベクトル」が使われます。
 
 $$
 \begin{aligned}
-L &= ライトベクトル \\
-V &= 視線ベクトル \\
+L &= 光線(ライト)ベクトル \\
+V &= 視線(カメラ)ベクトル \\
 N &= 法線ベクトル \\
 \\
 総反射率 &= 拡散反射BRDF * (1 - メタリック) + 鏡面反射BRDF \\
@@ -84,11 +89,15 @@ F &= F0 + (1 - F0)(1 - L \cdot H)^5 \\
 \end{aligned}
 $$
 
-基本的にはこの式をそのまま実装していきます。各式の意味については実装する時に個別に説明します。
+本テキストでは、この式をそのまま実装していきます。各式の意味については、実装する時に個別に説明します。
 
 ### 1.2 法線分布項
 
 表面が十分になめらかな物体では、多くの微小面の法線は表面法線に一致します。しかし、表面が粗い物体の場合、微小面はさまざまな方向を向いていると考えられます(だからザラザラに見える)。
+
+<p align="center">
+<img src="images/22_microfacet_roughness.png" width="66%" />
+</p>
 
 法線分布項(`Normal Distribution Function`、または`Microfacet Distribution Function`)は、 このような微小面の状態を考慮して、視点から見えるすべてのマイクロファセット法線の平均値を算出する関数です。
 
@@ -158,6 +167,11 @@ $$
 
 表面が粗い物体には、目に見えないほど小さな凸凹がたくさん存在します。これらの凸凹によって、ある微小平面に届くはずの光が別の微小平面によって遮られたり、視線の先にある微小平面が奥にある微小平面に隠されるという現象が発生します。
 
+<p align="center">
+<img src="images/22_microfacet_geometric_attenuation.png" width="50%" /><br>
+[左:視線が他の微小平面に遮られる 右:光線が他の微小平面に遮られる]
+</p>
+
 幾何減衰項(きかげんすいこう、`Geometric Attenuation Factor`または`Masking-Shadowing Function`)は、 このような微小面の状態を考慮して、光線が視点に到達する比率を算出する関数です。
 
 `Unreal Engine`では、Smith(スミス)氏が1969年に考案した技法をSchlick(シュリック)氏が改良した式をベースにして、`Unreal Engine`独自の改良を加えたバージョンが使われています。これは次の式になります。
@@ -172,14 +186,14 @@ $$
 
 `k`は「凹凸の度合い」を表すパラメータです。`G0`(ジーゼロ)関数は、入射ベクトル(または視線ベクトル)に対する微小平面の見えやすさを計算します。
 
-入射ベクトルが法線ベクトルと直角に近い場合、光が物体表面をかすめるように通過するので、わずかな凹凸でも遮られる確率が高くなります。逆に垂直に近い場合はほとんど遮られることはありません。
+入射ベクトルが法線ベクトルと直角に近い場合、光が物体表面をかすめるように通過するので、わずかな凹凸でも光が遮られる確率が高くなります。逆に垂直に近い場合はほとんど遮られません。
 
 また、`k`が小さい場合は物体表面の凹凸が大きいことを意味します。この場合、わずかな傾きであっても光が遮られる確率が高くなります。
 
 ある微小平面について、入射光が視線に到達しない主な原因は以下の2つが考えられます。
 
->* 他の微小平面に遮られて、入射光が目的の微小平面まで届かない。
->* 他の微小平面に遮られて、視点から目的の微小平面が見えない。
+>* 他の微小平面に遮られて、入射光が目的の微小平面まで届かない(シャドウイング)。
+>* 他の微小平面に遮られて、視点から目的の微小平面が見えない(マスキング)。
 
 そこで、先の式では入射ベクトルと視線ベクトルのそれぞれについて、`G'`関数を使って遮蔽率を求めます。次に、これら2つの値を乗算して「入射光が視点に到達する比率」を算出します。
 
@@ -221,9 +235,16 @@ $$
 
 ### 1.4 フレネル項
 
+光が屈折率の異なる物質の境界(「界面(かいめん)」といいます)に入射すると、光の一部が反射され、残りは透過します。この反射と透過の比率は「フレネル方程式」によって表せることが分かっています。
+
+<p align="center">
+<img src="images/shana-van-roosbroek-czaKJrW6JVk-unsplash.jpg" width="33%" /><br>
+Photo by Shana Van Roosbroek on https://unsplash.com/@shanavaro
+</p>
+
 流れの静かな川を見ることを考えてみましょう。水面を真上から見ると、水底まで見通すことができます。そこから、徐々に角度を付けていくと、少しずつ空の色が写り込んできます。
 
-やがて水面をかすめるような角度になると、見えるのは空ばかり。水底どころか水中はほとんど見えません。このような、「見る角度によって反射率が異なる」という光のふるまいは「フレネル方程式」と呼ばれる式で表せることが分かっています。
+やがて水面をかすめるような角度になると、見えるのは空の色ばかり。水底どころか水中自体がほとんど見えません。「フレネル方程式」は、このような「見る角度によって反射率が異なる」という光のふるまいを表します。
 
 フレネル方程式は水と空気の境界にかぎらず、あらゆる「界面(異なる物質の境界)」で発生します。リアルな映像表現を行う場合、フレネル方程式を避けて通ることはできません。しかし、フレネル方程式は複雑な計算を必要とします。
 
@@ -232,7 +253,7 @@ $$
 
 前掲のURLを見てみると分かりますが、リアルタイムに計算させるには計算量が多すぎます。そこで、いろいろ違いはあるものの、ある程度同じ反射特性を表現できる「近似式(きんじしき)」が考案されました。
 
-この近似式は、発見者の名前をとって「シュリック(Schlick)の近似式」と呼ばれています。シュリックの近似式は次のように表されます。
+この近似式は、考案者の名前をとって「シュリック(Schlick)の近似式」と呼ばれています。シュリックの近似式は次のように表されます。
 
 $$
 F = F0 + (1 - F0)(1 - cosθ)^5
